[package]

name = "redlock"
version = "1.2.0-alpha.0"
authors = ["Jan-Erik Rediger <badboy@archlinux.us>"]

keywords = ["distributed", "locking"]
description = "Implementation of the distributed locking mechanism built on top of Redis"

homepage = "https://github.com/badboy/redlock-rs"
repository = "https://github.com/badboy/redlock-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[dependencies]
redis = "0.22.2"
rand = "^0.8"
tokio = { version = "^1.15", features = ["rt"], optional = true }

[features]
default = []
async = ["tokio"]
tls = ["redis/tls"]

[dev-dependencies]
testcontainers = "^0.12"
once_cell = "^1.9"
anyhow = "^1.0"
