[package]

name = "redlock"
version = "1.2.0-alpha.0"
authors = ["Jan-Erik Rediger <badboy@archlinux.us>"]

keywords = ["distributed", "locking"]
description = "Implementation of the distributed locking mechanism built on top of Redis"

homepage = "https://github.com/badboy/redlock-rs"
repository = "https://github.com/badboy/redlock-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[dependencies]
redis = "0.23.0"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["rt"], optional = true }

[features]
default = []
async = ["tokio"]
tls = ["redis/tls"]

[dev-dependencies]
testcontainers = "0.14.0"
once_cell = "1.17.1"
anyhow = "1.0.70"
itertools = "0.10.5"
